--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js"></script>
+
+    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="images/favicon/favicon.svg" />
+<link rel="shortcut icon" href="images/favicon/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="Thrisha Kumar" />
+<link rel="manifest" href="images/favicon/site.webmanifest" />
 </head>
+
 <body>
     <header>
         <img src="images/Thrish.jpg" width="50px">
-        <nav class="nav">  
+        <div class="hamburger" onclick="toggleNav()">
+            <hr><hr><hr> 
+        </div>
+        <nav class="nav toggle-nav">  
+
             <div class="navtext">
             <a href="#about">About</a>
             <a href="#gallery">Gallery</a>
@@ -25,7 +38,7 @@
             </section>
 
             <section class="about1">
-                <img src="images/img1Thrish.jpg" width="280px"> 
+                <img src="images/img1Thrish.jpg"  > 
             <div>
             <h3>Thrisha Kumar</h3>
             <p> An aspiring Graphic and UI/UX designer, always finding new things to learn. As  someone who has always been into art, I came upon digital design in high school, fell in love, and have been in a long-term relationship since. You’ll find me getting lost inside my work, sometimes losing track of time. I demonstrate consistent progress in my work, always try to better it, and bringing out my best. I value collaboration and advocate for inclusive environments. Leadership is something that comes to me naturally, and I love hearing everyone’s voices. Problem-solving and creativity are skills I’ve built my entire life, and continue to excel in. 
@@ -50,15 +63,15 @@
 
             <section class="gallerybg">
             <section class="row1">
-            <img src="images/Iso_Grid_Template-01.jpg" width="500px">
-            <img src="images/portrait 1.jpeg" width="400px">
-            <img src="images/Low Poly Portrait.jpg" width="350px">
+            <img src="images/Iso_Grid_Template-01.jpg"  class="iso">
+            <img src="images/portrait 1.jpeg"  class="portrait1">
+            <img src="images/Low Poly Portrait.jpg"  class="portrait2">
         </section>
             <br>
             <section class="row2">
-                <img src="images/dosa.png" width="500px" height="500px">
-            <img src="images/multi.png" width="400px">
-            <img src="images/kumart-lab10.png" width="350px">
+                <img src="images/dosa.png" class="dosa">
+            <img src="images/multi.png"  class="multi">
+            <img src="images/kumart-lab10.png" class="lab10">
         </section>
     </section>
         </section>
@@ -66,11 +79,11 @@
 
     <section class="contact" id="contact">
         <footer>
-            <h1>GET IN TOUCH</h1>
+                <h1>GET IN TOUCH</h1>
         <section class="info">
-            <h3>thrishakmr@gmail.com</h3>
-            <img src="images/linkedin.png" width="30px">
-            <img src="images/Instagram-Logo.wine.png" width="45px">
+            <a href="mailto:thrishakmr@gmail.com"> <h3>thrishakmr@gmail.com</h3> </a>
+            <a href="https://www.linkedin.com/in/thrisha-kumar-92a35427a"><img src="images/linkedin.png" width="30px"></a>
+            <a href="https://www.instagram.com/thrishdesigns/?igsh=ZGNnZHZ1ZTM3b3Ew"><img src="images/Instagram-Logo.wine.png" width="45px"> </a>
         </section>
         </footer>
     </section>
